# agentprovision-agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  agentprovision.code-workspace  docker-compose.prod.yml  docker-compose.yml  openapi.json  opencode.json  package-lock.json  package.json  rust-toolchain.toml  server.py  session-1-opencode-gemma4.md  tsconfig.json
.github/: copilot-instructions.md  mcp-servers.md
.github/workflows/: agentprovision-api.yaml.disabled  agentprovision-web.yaml.disabled  agentprovision-worker.yaml.disabled  cli-build-matrix.yaml  cli-release.yaml  code-worker-deploy.yaml.disabled  deploy-all.yaml.disabled  docker-cleanup.yaml  docker-desktop-deploy.yaml  kubernetes-infrastructure.yaml.disabled  kubernetes-shared.yaml.disabled  local-deploy.yaml  luna-client-build.yaml  tests.yaml
.playwright-cli/: page-2026-03-16T01-18-02-840Z.yml  page-2026-03-16T01-18-09-133Z.yml  page-2026-03-16T01-18-25-872Z.yml  page-2026-03-16T01-18-36-026Z.yml  page-2026-03-16T01-19-28-323Z.yml  page-2026-03-16T01-19-30-244Z.yml  page-2026-03-16T01-19-44-371Z.yml  page-2026-03-16T01-20-06-995Z.yml
apps/adk-server/: requirements.txt
apps/agentprovision-cli/: Cargo.toml  README.md
apps/agentprovision-cli/install/: install.ps1  install.sh
apps/agentprovision-cli/src/: cli.rs  context.rs  main.rs  output.rs  progress.rs  thinking.rs
apps/agentprovision-cli/src/commands/: agent.rs  cancel.rs  chat.rs  coalition.rs  completions.rs  desktop.rs  goal.rs  integration.rs  learn.rs  login.rs  logout.rs  memory.rs  mod.rs  policy.rs  quickstart.rs  recall.rs  recipes.rs  remember.rs  review.rs  run.rs  session.rs  sessions.rs  skill.rs  status.rs  tasks.rs  upgrade.rs  usage.rs  watch.rs  workflow.rs  workspace.rs
apps/agentprovision-cli/tests/: desktop_contract.rs
apps/agentprovision-cli/tests/golden/: learn_dry_run.txt
apps/agentprovision-core/: Cargo.toml  README.md
apps/agentprovision-core/src/: auth.rs  chat.rs  client.rs  config.rs  desktop.rs  error.rs  events.rs  lib.rs  mcp.rs  models.rs  runtime.rs
apps/agentprovision-core/src/training/: github_cli.rs  local_ai_cli.rs  mod.rs
apps/agentprovision-core/tests/: chat_job_resilience.rs  desktop_contract.rs  stream_client_timeout.rs  stream_timeout_spike.rs  transport_classification.rs
apps/api/: .env.example  Dockerfile  README.md  conftest.py  print_routes.py  pytest.ini  requirements.in  requirements.txt
apps/code-worker/: .coveragerc  Dockerfile  README.md  cli_runtime.py  entrypoint.sh  hook_templates.py  pytest.ini  requirements.txt  session_event_emitter.py  session_manager.py  tenant_feature_flags.py  transcription.py  worker.py  workflows.py
apps/dev-worker/: entrypoint.sh  worker.py  workflows.py
apps/device-bridge/: main.py  pytest.ini  requirements.txt
apps/embedding-service/: Cargo.toml  Dockerfile  README.md
apps/luna-client/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
apps/mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml
apps/memory-core/: README.md
apps/web/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts
benchmarks/: 2026-04-27-luna-bench-FINAL-summary.md  2026-04-27-luna-bench-v0-aborted.md  2026-04-27-luna-bench-v3-raw.md  2026-04-27-luna-bench-v3-stage-attribution.md  2026-04-27-luna-bench-v3.json  2026-04-27-luna-bench-v4-final.md  2026-04-27-luna-bench-v4-raw.md  2026-04-27-luna-bench-v4.json
cloudflared/: config.yml
config/: settings.py
docs/: CRITICAL_FLOWS_TEST_RESULTS.md  DEPLOYMENT_STATUS_2025_11_26.md  IMPLEMENTATION_VERIFICATION_REPORT.md  KUBERNETES_DEPLOYMENT.md  LEVIS_ARCHITECTURE_OVERVIEW.md  LLM_INTEGRATION_README.md  MANUAL_BROWSER_TESTING_CHECKLIST.md  MCP_INTEGRATION.md  PATENT_DISCLOSURE_2026-04-04.md  README.md  REPORTING_VISUALIZATION_SUMMARY.md  SESSION_SUMMARY_2025-12-01.md  TESTING_SUMMARY.md  USAGE_REPORT_2026-03-11.md  adk-integration-complete.md  ux-improvements-clevel.md
docs/architecture/: alpha_cli_kernel.md  dashboard.md  workspace.md
docs/archive/: AGENTPROVISION_MCP_INTEGRATION.md  DEPLOYMENT_TESTING_README.md  E2E_TEST_FINDINGS.md  INTEGRATION_COMPLETE.md  PRODUCTION_DEPLOYMENT_INSTRUCTIONS.md  TEST_RESULTS_SUMMARY.md  UX_REDESIGN_PLAN.md  agentprovision-feature-alignment.md  frontend-i18n-progress.md  frontend-revamp.md  gemini.md  integrations-hub.md  prompt.md
docs/changelog/: 2026-04-19-to-2026-05-03.md
docs/cli/: README.md  getting-started.md  troubleshooting.md
docs/demo/: 2026-04-13-levis-management-demo-pitch.md
docs/leads/: 2026-04-07-target-leads-40.md
docs/onboarding/: 2026-05-09-angelo-platform-inventory.md
docs/operator/: luna-desktop-control-compose-cutover.md
docs/pitch/: 2026-05-14-claude-auth-api-key-path.md  2026-05-14-claude-auth-stdin-forward.md  2026-05-14-deploy-change-detection-fix.md  (+7 more)
helm/: README.md
kubernetes/: README.md  cloudflared-deployment.yaml  ingress.yaml
memory/: vertex_vector.py
scripts/: README.md  apply_pending_migrations.sh  backfill_embeddings.py  backfill_knowledge_from_sessions.py  backup_db.sh  benchmark_luna.py  check_datasets.py  claudia_bridge.py  create_agent.py  deploy_k8s_local.sh  e2e_test_production.sh  fabrication_report.py  import_community_skills.py  local-deploy.sh  migrate_compose_workspaces_volume.sh  production_health_check.sh  run_demo_workflow.sh  simulate_ceo_journey.py  test_critical_flows.sh  verify_implementation.sh  verify_settings_integrations.py
services/: __init__.py  auth.py  databricks_client.py  knowledge_graph.py
servicetsunami_supervisor/: __init__.py  customer_support.py  data_analyst.py  deal_researcher.py  deal_team.py  dev_ops.py  knowledge_manager.py  outreach_specialist.py  prospect_outreach.py  prospect_researcher.py  report_generator.py  vet_report_generator.py  web_researcher.py
tests/: package-lock.json  package.json  playwright.config.ts  test_github_tools.py
tools/: __init__.py  action_tools.py  data_tools.py  github_tools.py  knowledge_tools.py  vet_tools.py
(+1587 files in other folders)
