[package]
name = "agentprovision-cli"
version = "0.7.0"
edition = "2021"
rust-version = "1.77.2"
description = "Single-binary CLI for the AgentProvision platform — login, chat, workflows, agents."
license = "MIT"
repository = "https://github.com/nomad3/agentprovision-agents"
authors = ["AgentProvision"]
# Binary is `ap` (short, gh-style). Crate name stays agentprovision-cli for
# crates.io / cargo install — `cargo install agentprovision-cli` installs
# the `ap` binary onto PATH.
default-run = "ap"

[[bin]]
name = "ap"
path = "src/main.rs"

[dependencies]
agentprovision-core = { path = "../agentprovision-core", features = ["keyring"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console = "0.15"
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
indicatif = "0.17"
termimad = "0.31"
rustyline = { version = "14", default-features = false, features = ["with-file-history", "custom-bindings"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
url = "2"
webbrowser = "1"
dirs = "5"
crossterm = "0.27"
# `ap upgrade` self-update path. PR-D-4.
# Features: rustls (no openssl, matches reqwest config across the workspace),
# archive-zip (we ship .zip on every target — PR-D-2 review fix), and
# compression-zip-deflate (zip's internal per-entry compression — without
# this the extractor errors on the deflate-stored `ap` binary inside the
# archive). The task brief asked for `compression-flate2`, but that toggles
# gzip support and force-pulls `archive-tar`; the correct knob for zip-only
# is `compression-zip-deflate`.
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
semver = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
