[package]
name = "agentprovision-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Shared business logic for AgentProvision Rust surfaces (Luna desktop client and agentprovision CLI)."
license = "MIT"
repository = "https://github.com/nomad3/agentprovision-agents"
authors = ["AgentProvision"]

[lib]
name = "agentprovision_core"
path = "src/lib.rs"

[features]
default = []
# Pulls in the OS keychain backend. The CLI uses this; Luna can opt out and
# rely on Tauri's own secure-store wiring if it ever wants to.
keyring = ["dep:keyring"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
toml = "0.8"
dirs = "5"
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
keyring = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"
